--- a/Chat.Core/Chat.Core.csproj
+++ b/Chat.Core/Chat.Core.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LinqKit, Version=1.1.8.0, Culture=neutral, PublicKeyToken=bc217f8844052a91, processorArchitecture=MSIL">
+      <HintPath>..\packages\LinqKit.1.1.8.0\lib\net452\LinqKit.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -49,9 +53,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\AppDbInitializer.cs" />
     <Compile Include="DAL\BaseEntity.cs" />
     <Compile Include="DAL\ChatContext.cs" />
+    <Compile Include="DAL\ChatUser.cs" />
     <Compile Include="DAL\IDbContext.cs" />
+    <Compile Include="DAL\Message.cs" />
     <Compile Include="Infrastructure\EFRepository.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
