--- a/Chat.Web/Views/Web.config
+++ b/Chat.Web/Views/Web.config
@@ -17,6 +17,8 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.Razor" />
+        <add namespace="System.Web.WebPages.Razor" />
         <add namespace="Chat.Web" />
       </namespaces>
     </pages>
